feat: 매수하기 다이얼로그 연결, 매도하기 다이얼로그 연결, 화면 전환 완료

--- a/app/src/main/res/layout/activity_buying.xml
+++ b/app/src/main/res/layout/activity_buying.xml
@@ -58,13 +58,16 @@
             app:layout_constraintStart_toEndOf="@+id/text_view_recent_money"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_view_two_stock"
+        <EditText
+            android:id="@+id/edit_text_input_stock"
             style="@style/Black_Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/two_stock"
+            android:background="@null"
+            android:inputType="number"
+            android:hint="0"
+            android:maxLength="4"
             android:textSize="36sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_stock_unit"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -81,7 +84,7 @@
             android:text="@string/stock_unit"
             android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_view_two_stock"
+            app:layout_constraintStart_toEndOf="@+id/edit_text_input_stock"
             app:layout_constraintTop_toBottomOf="@+id/text_view_recent_money" />
 
         <TextView
@@ -96,7 +99,7 @@
             app:layout_constraintEnd_toStartOf="@+id/text_view_total_money"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_stock" />
 
         <TextView
             android:id="@+id/text_view_total_money"
@@ -108,7 +111,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_money_unit2"
             app:layout_constraintStart_toEndOf="@+id/text_view_total"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_stock" />
 
 
         <TextView
@@ -121,7 +124,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/text_view_total_money"
-            app:layout_constraintTop_toBottomOf="@+id/text_view_two_stock" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_stock" />
 
         <TextView
             android:id="@+id/text_view_left_parentheses"
@@ -132,13 +135,13 @@
             android:text="@string/left_parentheses"
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@+id/text_view_buying_money"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_rest_money"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />
 
         <TextView
-            android:id="@+id/text_view_buying_money"
+            android:id="@+id/text_view_rest_money"
             style="@style/Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -161,7 +164,7 @@
             android:textColor="@color/pastel_red"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@+id/text_view_lack"
-            app:layout_constraintStart_toEndOf="@+id/text_view_buying_money"
+            app:layout_constraintStart_toEndOf="@+id/text_view_rest_money"
             app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />
 
         <TextView
@@ -241,7 +244,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/one"
                 android:textSize="20sp" />
@@ -254,7 +256,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/two"
                 android:textSize="20sp" />
@@ -267,7 +268,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/three"
                 android:textSize="20sp" />
@@ -283,7 +283,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/four"
                 android:textSize="20sp" />
@@ -296,7 +295,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/five"
                 android:textSize="20sp" />
@@ -309,7 +307,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/six"
                 android:textSize="20sp" />
@@ -325,7 +322,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/seven"
                 android:textSize="20sp" />
@@ -338,7 +334,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/eight"
                 android:textSize="20sp" />
@@ -351,7 +346,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/nine"
                 android:textSize="20sp" />
@@ -367,8 +361,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:paddingTop="16dp"
-                android:paddingBottom="20dp"
                 android:stateListAnimator="@null"
                 android:text="@string/all_delete"
                 android:textSize="14sp" />
@@ -381,7 +373,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:padding="16dp"
                 android:stateListAnimator="@null"
                 android:text="@string/zero"
                 android:textSize="20sp" />
@@ -395,9 +386,9 @@
                 android:layout_weight="1"
                 android:background="@color/white"
                 android:paddingStart="32dp"
-                android:paddingTop="20dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="32dp"
-                android:paddingBottom="18dp"
+                android:paddingBottom="10dp"
                 android:src="@drawable/ic_backspace_24_dp"
                 android:stateListAnimator="@null" />
         </TableRow>
