--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -9,16 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/warm_white">
-
-        <include
+        <Toolbar
             android:id="@+id/toolbar"
-            layout="@layout/include_toolbar"
+            android:background="@color/white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/Bold"
+            android:titleTextColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_wallet_mystatus"
