--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,42 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+  <group android:scaleX="0.14132813"
+      android:scaleY="0.14132813"
+      android:translateX="17.82"
+      android:translateY="17.82">
+    <path
+        android:pathData="M0.5,-0.1h512v512h-512z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startY="511.8775"
+            android:startX="0.4946"
+            android:endY="-0.1225"
+            android:endX="512.4946"
+            android:type="linear">
+          <item android:offset="0.2439" android:color="#FFE67C28"/>
+          <item android:offset="0.6102" android:color="#FFF3683A"/>
+          <item android:offset="1" android:color="#FFFF5649"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M394.1,195c-0.5,2.3 -22,49.5 -51.5,92.1c-19.8,28.6 -62.7,71 -124,72.7c-71.6,2.1 -118.9,-56.2 -125.3,-64.3"
+        android:strokeWidth="52.984"
+        android:fillColor="#00000000"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="round"/>
+    <path
+        android:pathData="M147.5,247.7m-24.9,0a24.9,24.9 0,1 1,49.8 0a24.9,24.9 0,1 1,-49.8 0"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M209.8,285.1m-24.9,0a24.9,24.9 0,1 1,49.8 0a24.9,24.9 0,1 1,-49.8 0"
+        android:fillColor="#FFFFFF"/>
+    <path
+        android:pathData="M357.2,174.6c19.1,-5.8 38.3,-11.5 57.4,-17.3c4.9,13 11.9,41.4 16.8,54.3"
+        android:strokeWidth="31.1671"
+        android:fillColor="#00000000"
+        android:strokeColor="#FFFFFF"
+        android:strokeLineCap="round"/>
+  </group>
 </vector>
