--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,9 @@
         <item name="android:editTextBackground">@drawable/bg_edit_text</item>
         <item name="editTextStyle">@style/EditTextTextStyle</item>
     </style>
+
+    <!--  Splash theme.  -->
+    <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
