--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -5,4 +5,5 @@
     android:layout_height="wrap_content"
     android:background="?attr/colorOnPrimary"
     android:minHeight="?attr/actionBarSize"
-    android:theme="?attr/actionBarTheme" />
+    android:theme="?attr/actionBarTheme"
+    android:elevation="20dp"/>
