--- a/app/src/main/res/layout/activity_search_list.xml
+++ b/app/src/main/res/layout/activity_search_list.xml
@@ -47,6 +47,7 @@
         android:id="@+id/fragment_container_view_search"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
