--- a/app/src/main/res/layout/fragment_on_boarding2.xml
+++ b/app/src/main/res/layout/fragment_on_boarding2.xml
@@ -1,74 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/ic_img_tutorial_secondline"
+    android:background="@drawable/img_tutorial_secondline"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_onboarding_ovalwrapper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        >
-        <View
-            android:id="@+id/view_onboarding_oval1"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:backgroundTint="@color/dusty_orange"
-            android:background="@drawable/bg_oval"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            />
-        <View
-            android:id="@+id/view_onboarding_oval2"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:backgroundTint="@color/grey_300"
-            android:background="@drawable/bg_oval"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval1"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            />
-        <View
-            android:id="@+id/view_onboarding_oval3"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:backgroundTint="@color/grey_300"
-            android:background="@drawable/bg_oval"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval2"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            />
-        <View
-            android:id="@+id/view_onboarding_oval4"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:backgroundTint="@color/grey_300"
-            android:background="@drawable/bg_oval"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/view_onboarding_oval3"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="6dp"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/txtview_onboarding2_1_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/layout_onboarding_ovalwrapper"
+        app:layout_constraintTop_toTopOf="parent"
         style="@style/Medium"
         android:text="@string/onboarding2_1_1"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +97,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_2_3"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="120dp"
-        android:src="@drawable/ic_img_tutorial_second"
+        android:src="@drawable/img_tutorial_second"
         android:layout_marginTop="4dp"
         android:contentDescription="@string/onboarding2_2_1"
         />
