--- a/app/src/main/res/layout/fragment_on_boarding1.xml
+++ b/app/src/main/res/layout/fragment_on_boarding1.xml
@@ -66,14 +66,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ImageView
         android:id="@+id/imgview_onboarding1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="321dp"
         app:layout_constraintTop_toBottomOf="@+id/layout_onboarding_ovalwrapper"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_img_tutorial_first"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="120dp"
         android:contentDescription="@string/onboarding1_1_2"
+        app:srcCompat="@drawable/img_tutorial_first"
         />
     <TextView
         android:id="@+id/txtview_onboarding1_1_1"
