--- a/app/src/main/res/layout/fragment_on_boarding2.xml
+++ b/app/src/main/res/layout/fragment_on_boarding2.xml
@@ -149,13 +149,12 @@
         app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_2_2"
         />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="268dp"
+        android:layout_height="304dp"
         app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_2_3"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="120dp"
-        android:src="@drawable/ic_img_tutorial_second"
-        android:layout_marginTop="4dp"
         android:contentDescription="@string/onboarding2_2_1"
+        app:srcCompat="@drawable/img_tutorial_second"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
