--- a/app/src/main/res/layout/fragment_on_boarding3.xml
+++ b/app/src/main/res/layout/fragment_on_boarding3.xml
@@ -6,12 +6,85 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/txtview_onboarding2_1_1"
+        style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="onboarding3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="32dp"
+        android:text="평가손익?"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/iv" />
+    <TextView
+        android:id="@+id/txtview_onboarding2_1_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Medium"
+        android:text="코스피?"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_1"
+        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_1_1"
+        />
+    <TextView
+        android:id="@+id/txtview_onboarding2_1_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Medium"
+        android:text="어렵다고 "
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_1_1"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_2"
+        />
+    <TextView
+        android:id="@+id/txtview_onboarding2_1_3_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Medium"
+        android:text="느끼지 마세요"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_2"
+        app:layout_constraintStart_toEndOf="@+id/txtview_onboarding2_1_3"
+        />
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="184dp"
+        android:layout_height="208dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_tutorial_third" />
+
+
+    <TextView
+        android:id="@+id/txtview_onboarding1_1_1"
+        style="@style/Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="64dp"
+        android:text="@string/onboarding1_1_1"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_3_2" />
+
+    <TextView
+        android:id="@+id/txtview_onboarding1_1_2"
+        style="@style/Bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/onboarding1_1_2"
+        android:textColor="@color/dusty_orange"
+        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding1_1_1"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding1_1_1" />
+    <TextView
+        android:id="@+id/txtview_onboarding1_1_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding1_1_2"
+        style="@style/Medium"
+        android:text="@string/onboarding1_1_3"
+        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding1_1_2"
+        android:textColor="@color/black"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
